Cover selecting contients and changing theme

--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -619,7 +619,21 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li><del>Identify a country by selecting it</del></li>
 <li><del>Show “trajectory” for selected country</del></li>
 </ul></li>
+<li>Add another widget to select continents, and modify your server function to filter the data so that only the selected continents are shown.</li>
 </ul>
+</section>
+<section id="cutomising-how-our-app-looks" class="slide level2">
+<h2>Cutomising how our app looks</h2>
+<ul>
+<li>The <code>shinythemes</code> package lets us select readymade themes for our app</li>
+<li>Can write our own css for more control</li>
+<li><code>shinythemes::themeSelector()</code> widget lets us interactively exeriment with themes</li>
+<li>Use the option <code>theme = shinytheme(&quot;themename&quot;)</code> on your user interface function (<code>fluidPage</code>) in our example</li>
+</ul>
+</section>
+<section id="app-layout" class="slide level2">
+<h2>App layout</h2>
+<p>TODO</p>
 </section>
 <section id="deploying-shiny-apps" class="slide level2">
 <h2>Deploying Shiny apps</h2>
