Raw output of click

--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -694,6 +694,14 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Columns can be nested</li>
 </ul>
 </section>
+<section id="making-the-graph-interactive" class="slide level2">
+<h2>Making the graph interactive</h2>
+<ul>
+<li><p>Click on a country and see its name</p></li>
+<li><p><code>renderPlot(&quot;plotname&quot;, click = &quot;clickName&quot;)</code> will output information about mouse clicks to the server.</p></li>
+<li><p>Demo this</p></li>
+</ul>
+</section>
 <section id="deploying-shiny-apps" class="slide level2">
 <h2>Deploying Shiny apps</h2>
 <ul>
