Add summary slide

--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -805,16 +805,24 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h2>Deploying Shiny apps</h2>
 <ul>
 <li><p>Run from R(Studio)</p></li>
-<li><a href="https://shinyapps.io" class="uri">https://shinyapps.io</a> easy deployment from RStudioo
+<li><a href="https://shinyapps.io" class="uri">https://shinyapps.io</a> easy deployment from RStudio
 <ul>
 <li>Various pricing tiers</li>
 <li><a href="https://mawds.shinyapps.io/worked_example/" class="uri">https://mawds.shinyapps.io/worked_example/</a></li>
 </ul></li>
-<li>Local Shiny server
+<li>Shiny server
 <ul>
 <li>Free and commercial versions</li>
 <li>Authentication requires commercial version</li>
 </ul></li>
+</ul>
+</section>
+<section id="summary" class="slide level2">
+<h2>Summary</h2>
+<ul>
+<li>Define the UI and server functions</li>
+<li>Reactive programming handles the depencencies between elements</li>
+<li>Deploy apps using shinyapps.io or to a Shiny Server</li>
 </ul>
 </section>
     </div>
