--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -562,14 +562,10 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section id="getting-started" class="slide level2">
 <h2>Getting started</h2>
 <ul>
-<li>Run the Docker container we will be using:</li>
+<li>Run rstudio:</li>
 </ul>
-<pre><code>docker run -d --name rstudio -p 8787:8787 -p 3838:3838 \
--v &quot;$(pwd)/coursematerial:/home/rstudio/coursematerial&quot; \
--e USERID=ID  mawds/rstudio</code></pre>
+<pre><code>rstudio</code></pre>
 <ul>
-<li><p>Connect to <a href="http://localhost:8787" class="uri">http://localhost:8787</a> using Chromium.</p></li>
-<li><p>username: rstudio password: rstudio</p></li>
 <li><p><code>coursematerial</code> contains the data and plotting functions we will use.</p></li>
 <li><p><code>codeExample.R</code> shows how to use the plotting functions.</p></li>
 </ul>
