Change video options to work with github pages

--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -525,7 +525,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </section>
 <section id="gapminder" class="slide level2">
 <h2><a href="https://www.gapminder.org">Gapminder</a></h2>
-<iframe width="560" height="315" src="http://www.youtube.com/embed/jbkSRLYSojo?start=75" frameborder="0" allowfullscreen>
+<iframe width="560" height="315" src="http://www.youtube.com/embed/jbkSRLYSojo?start=75" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen>
 </iframe>
 </section>
 <section id="static-visualisation" class="slide level2">
