Add hint about year

--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -684,7 +684,10 @@ gapminder <span class="op">%&gt;%</span><span class="st"> </span>
 <ul>
 <li>You may wish to explore <code>animationOptions()</code> to control the animation speed</li>
 </ul></li>
-<li>Use the slider to make the graph interactive. <a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/61fd96effe38be73073b088b6c6aaefcf4a4b988">git:05_baseplot</a></li>
+<li>Use the slider to make the graph interactive.
+<ul>
+<li><code>input$year</code> will contain the value of the year <a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/61fd96effe38be73073b088b6c6aaefcf4a4b988">git:05_baseplot</a></li>
+</ul></li>
 </ul>
 </section>
 <section id="more-widgets" class="slide level2">
