--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -1894,7 +1894,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Select / animate the year</li>
 <li>Only plot data for selected continents</li>
 <li>Deploy the app to shinyapps.io</li>
-<li>(Show the richest country on the gaph and its GDP)</li>
+<li>(Show the richest country on the graph and its GDP)</li>
 </ul></li>
 </ul>
 </section>
