Add cross refs to course notes from slides

--- a/WorkshopSlides.html
+++ b/WorkshopSlides.html
@@ -1941,11 +1941,12 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section id="exercise---getting-ready-for-the-rest-of-the-course." class="slide level2">
 <h2>Exercise - getting ready for the rest of the course.</h2>
 <ul>
-<li>Copy the gapminder data and <code>workshopFunctions.R</code> to the app directory</li>
-<li><p>Modify the app to load the ggplot2 and dplyr libraries, gapminder data and <code>workshopFunctions.R</code></p></li>
+<li>Copy the gapminder data (<code>gapminder.rds</code>) and <code>workshopFunctions.R</code> to the app directory</li>
+<li><p>Modify the app to load the ggplot2 and dplyr libraries, gapminder data, and <code>workshopFunctions.R</code></p></li>
 <li><p>Check your app still works</p></li>
 </ul>
 <p><a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/7f3298332b887b2015d8b6636e46b4a37bb15906">git:02_loaddata</a></p>
+<p>(Course notes: <a href="https://uomresearchit.github.io/RSE18-shiny-workshop/basics/">Getting started</a>)</p>
 </section>
 <section id="anatomy-of-a-shiny-app---user-interface" class="slide level2">
 <h2>Anatomy of a Shiny App - user interface</h2>
@@ -2000,6 +2001,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </ul>
 <p>(This won’t do anything yet - we’ll connect it to the graph shortly)</p>
 <p><a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/c384dd124d40709a4d3000cbc16c89aaa67f0845">git:03_continentwidget</a></p>
+<p>(Course notes: <a href="https://uomresearchit.github.io/RSE18-shiny-workshop/ui/">User interface design</a>)</p>
 </section>
 <section id="exercises---putting-it-all-together" class="slide level2">
 <h2>Exercises - Putting it all together</h2>
@@ -2011,6 +2013,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Replace the bins widget with a widget to select the year <a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/e89c9a1c78b3bd60bb9e5444b4b3616defefc60f">git:05_yearwidget</a></li>
 <li>Use the outputs of the widgets to make the graph interactive <a href="https://github.com/UoMResearchIT/RSE18-shiny-workshop-materials/commit/7f6c74d7c70ae0127dd042c1bbf6c9483c9df5ce">git:06_interactive</a></li>
 </ul>
+<p>(Course notes: <a href="https://uomresearchit.github.io/RSE18-shiny-workshop/together/">Putting it all together</a>)</p>
 </section>
 <section id="deploying-shiny-apps" class="slide level2">
 <h2>Deploying Shiny apps</h2>
@@ -2028,6 +2031,7 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li>Authentication requires commercial version</li>
 </ul></li>
 </ul>
+<p>(Course notes: <a href="https://uomresearchit.github.io/RSE18-shiny-workshop/deploy/">Deploying Shiny apps</a>)</p>
 </section>
 <section id="summary" class="slide level2">
 <h2>Summary</h2>
